--- a/client/src/App.css
+++ b/client/src/App.css
@@ -32,6 +32,7 @@
   
 }
 
+
 #navbrand {
   font-size: 35px;
 }
@@ -48,6 +49,12 @@
 
 #opener{
   width:100%;
+  height: auto;
+  margin-top:78px;
+}
+
+.offset{
+  height:100px;
 }
 
 #class{
@@ -58,13 +65,30 @@
   margin-top: 20px;
 }
 
-#about-me, .gallery, .image-holder{
-  max-height:200px;
-  max-width:200px;
+#about-me{
+  max-height:400px;
+  max-width:400px;
   height:auto;
   width:auto;
   z-index: 1;
-  margin-top:25px;
+  border: 1px solid grey;
+  padding:5px;
+  -webkit-box-shadow: 0px 0px 45px -5px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 0px 45px -5px rgba(0,0,0,0.75);
+  box-shadow: 0px 0px 45px -5px rgba(0,0,0,0.75);
+}
+
+
+.About, .Classes, .carousel{
+  height: auto;
+}
+
+.gallery, .image-holder{
+  max-height:300px;
+  max-width:300px;
+  height:auto;
+  width:auto;
+  z-index: 1;
 }
 
 .image-holder{
@@ -73,8 +97,11 @@
 
 
 .Footer{
-  height:200px;
+  height:150px;
   background-color: grey;
+  position: relative;
+  bottom: 0;
+  width: 100%;
 }
 
 .fab {
@@ -105,7 +132,5 @@ li:hover {
   opacity:.3;
 }
 
-.Gallery{
-  height: 100vh;
-}
+
 
