--- a/client/src/App.css
+++ b/client/src/App.css
@@ -70,7 +70,7 @@
   max-width:400px;
   height:auto;
   width:auto;
-  z-index: 1;
+  z-index: 3;
   border: 1px solid grey;
   padding:5px;
   -webkit-box-shadow: 0px 0px 45px -5px rgba(0,0,0,0.75);
@@ -102,6 +102,7 @@
   position: relative;
   bottom: 0;
   width: 100%;
+  
 }
 
 .fab {
@@ -132,5 +133,29 @@ li:hover {
   opacity:.3;
 }
 
+.Contact{
+  margin: 0 auto;
+}
 
+label:after {
+  content:"*";
+  color:red;
+}
 
+#text-area{
+  height:300px
+}
+
+.para {
+ /* The image used */
+ background-image: url("http://www.solidbackgrounds.com/images/1920x1080/1920x1080-ivory-solid-color-background.jpg");
+
+ /* Set a specific height */
+ min-height: 1000px; 
+
+ /* Create the parallax scrolling effect */
+ background-attachment: fixed;
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
+}
