--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,30 +1,9 @@
 .App {
   text-align: center;
-}
+  margin: 0;
+    padding: 0;
+    overflow-x: hidden; 
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
 }
 
 .Navbar, .Classes {
@@ -47,14 +26,9 @@
   margin-right: 50px;
 }
 
-#opener{
-  width:100%;
-  height: auto;
-  margin-top:78px;
-}
 
 .offset{
-  height:100px;
+  height:78px;
 }
 
 #class{
@@ -146,16 +120,11 @@ label:after {
   height:300px
 }
 
-.para {
- /* The image used */
- background-image: url("http://www.solidbackgrounds.com/images/1920x1080/1920x1080-ivory-solid-color-background.jpg");
-
- /* Set a specific height */
- min-height: 1000px; 
-
- /* Create the parallax scrolling effect */
- background-attachment: fixed;
- background-position: center;
- background-repeat: no-repeat;
- background-size: cover;
+.para{
+  background-image: url("./Home.jpg");
+  height: 700px;
+  background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
 }
+
