--- a/client/src/App.css
+++ b/client/src/App.css
@@ -244,7 +244,7 @@ hr {
   );
 }
 
-@media only screen and (max-width: 800px) {
+@media (min-width: 481px) and (max-width: 767px) {
   .blog-body {
     width: 100%;
   }
