--- a/client/src/App.css
+++ b/client/src/App.css
@@ -75,6 +75,15 @@
   box-shadow: 0px 0px 45px -5px rgba(0, 0, 0, 0.75);
 }
 
+@media (min-width: 320px) and (max-width: 480px) {
+  #about-me {
+    max-height: 375px;
+    max-width: 375px;
+    height: auto;
+    width: auto;
+  }
+}
+
 @keyframes slideInFromLeft {
   0% {
     opacity: 0;
@@ -296,7 +305,7 @@ hr {
     z-index: -20;
   }
   .Contact {
-    width: 350px;
+    width: 300px;
   }
 }
 
